[package]
name = "crawler_test_env"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discv5 = "0.2.2"
tokio = { version = "1.26.0", features = ["full"] }
rand = "0.8.5"
enr = { version = "*", features = ["serde", "ed25519", "rust-secp256k1"] }
k256 = "0.13.0"
bincode = "1.3.3"
rlp = "0.5.2"
num-bigint = "0.4.3"
num-traits = "0.2.15"
futures = "0.3"
num_cpus = "1.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.51.3", features = ["kad", "noise"] }
libp2p-tcp = { version = "0.39", features = ["tokio"] }
libp2p-noise = { version = "0.42.1" }
libsecp256k1 = "0.7.1"
elliptic-curve = "0.13"
rayon = "1.5.1"
crossbeam = "0.8.2"
parking_lot = "0.11.2"
log = "0.4"
simplelog = "*"


